--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -23,6 +23,8 @@ jobs:
           ghc-version: 8.10.4
           enable-stack: true
           stack-version: 'latest'
+          stack-no-global: true
+          stack-setup-ghc: true
 
       - name: Cache stack directories
         uses: actions/cache@v2.1.3
