--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -20,17 +20,15 @@ jobs:
       - name: Install Haskell Toolchain
         uses: haskell/actions/setup@v1
         with:
-          ghc-version: 8.10.4
           enable-stack: true
           stack-version: 'latest'
           stack-no-global: true
-          stack-setup-ghc: true
 
       - name: Cache stack directories
         uses: actions/cache@v2.1.3
         with:
           path: ~/.stack
-          key: ${{ runner.os }}-8.10.4-stack
+          key: ${{ runner.os }}-stack-${{ hashFiles('**/stack.yaml.lock') }}
 
       - name: Install Dependencies
         run: stack build --only-dependencies
