--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -24,10 +24,15 @@ jobs:
           stack-version: 'latest'
           stack-no-global: true
 
+      - name: Get Stack Root
+        run: |
+          echo "STACK_ROOT=$(stack path --stack-root)" >> $GITHUB_ENV
+          echo ${{ env.STACK_ROOT }}
+
       - name: Cache stack directories
         uses: actions/cache@v2.1.3
         with:
-          path: ~/.stack
+          path: ${{ env.STACK_ROOT }}
           key: ${{ runner.os }}-stack-${{ hashFiles('**/stack.yaml.lock') }}
 
       - name: Install Dependencies
