--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -25,18 +25,18 @@ jobs:
           stack-no-global: true
 
       - if: matrix.os == 'windows-latest'
-        run: echo "STACK_ROOT=%LOCALAPPDATA%\Programs\stack" >> $GITHUB_ENV
+        run: echo "STACK_DIR=%LOCALAPPDATA%\Programs\stack" >> $GITHUB_ENV
 
       - if: matrix.os != 'windows-latest'
-        run: echo "STACK_ROOT=~/.stack" >> $GITHUB_ENV
+        run: echo "STACK_DIr=~/.stack" >> $GITHUB_ENV
 
       - name: Get Stack Root
-        run: echo ${{ env.STACK_ROOT }}
+        run: echo ${{ env.STACK_DIR }}
 
       - name: Cache stack directories
         uses: actions/cache@v2.1.3
         with:
-          path: ${{ env.STACK_ROOT }}
+          path: ${{ env.STACK_DIR }}
           key: ${{ runner.os }}-stack-${{ hashFiles('**/stack.yaml.lock') }}
 
       - name: Install Dependencies
