--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -28,7 +28,7 @@ jobs:
         run: echo "STACK_DIR=%LOCALAPPDATA%\Programs\stack" >> $GITHUB_ENV
 
       - if: matrix.os != 'windows-latest'
-        run: echo "STACK_DIr=~/.stack" >> $GITHUB_ENV
+        run: echo "STACK_DIR=~/.stack" >> $GITHUB_ENV
 
       - name: Get Stack Root
         run: echo ${{ env.STACK_DIR }}
