--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -28,6 +28,7 @@ jobs:
         run: echo "STACK_DIR=%LOCALAPPDATA%\Programs\stack" >> $GITHUB_ENV
 
       - if: matrix.os != 'windows-latest'
+        shell: bash
         run: echo "STACK_DIR=~/.stack" >> $GITHUB_ENV
 
       - name: Get Stack Root
