--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -25,6 +25,7 @@ jobs:
           stack-no-global: true
 
       - if: matrix.os == 'windows-latest'
+        shell: bash
         run: echo "STACK_DIR=%LOCALAPPDATA%\Programs\stack" >> $GITHUB_ENV
 
       - if: matrix.os != 'windows-latest'
