--- a/teleport.cabal
+++ b/teleport.cabal
@@ -36,6 +36,8 @@ library
       OverloadedStrings
       RecordWildCards
       LambdaCase
+      DeriveGeneric
+      TemplateHaskell
   ghc-options: -Wall
   build-depends:
       aeson
@@ -58,6 +60,8 @@ executable teleport-exe
       OverloadedStrings
       RecordWildCards
       LambdaCase
+      DeriveGeneric
+      TemplateHaskell
   ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       aeson
@@ -82,6 +86,8 @@ test-suite teleport-test
       OverloadedStrings
       RecordWildCards
       LambdaCase
+      DeriveGeneric
+      TemplateHaskell
   ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       aeson
